[project]
name = "llm-gateway"
version = "0.2.0"
description = "OpenAI-compatible LLM proxy gateway with multi-backend failover"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "uvicorn>=0.45.0",
    "pydantic>=2.0",
    "aiolimiter>=1.1.0",
]
